feat: improve registration logic and return id on approval
