# certificate_authority/chain_service.py
@@ -14,7 +14,10 @@ class ChainService:
         nonce = eth_chain.eth.get_transaction_count(self.__chain.admin.account_address)
         # Call your function
         call_function = contract.functions.register(transaction.identity, transaction.public_key, transaction.signatures).build_transaction({"chainId": Chain_id, "from": self.__chain.admin.account_address, "nonce": nonce})
-
+        
+        # Get return value
+        res = contract.functions.register(transaction.identity, transaction.public_key, transaction.signatures).call({"from": self.__chain.admin.account_address})
+    
         # Sign transaction
         signed_tx = eth_chain.eth.account.sign_transaction(call_function, private_key=self.__chain.admin.account_key)
 
@@ -22,9 +25,9 @@ class ChainService:
         send_tx = eth_chain.eth.send_raw_transaction(signed_tx.rawTransaction)
 
         # Wait for transaction receipt
-        tx_receipt = eth_chain.eth.wait_for_transaction_receipt(send_tx)
+        eth_chain.eth.wait_for_transaction_receipt(send_tx)
         
-        return (tx_receipt)
+        return res
     
     def get_transaction(self, id: int) -> Transaction:
         _, identity, public_key, signatures = self.__chain.contract.eth_contract.functions.get(id).call()
@@ -32,5 +35,5 @@ class ChainService:
 
 if __name__ == '__main__':
     service = ChainService()
-    ls = service.get_transaction(0)
+    ls = service.register(Transaction("s", "a", "b"))
     print(ls)
