# certificate_authority/repository.py
@@ -7,11 +7,11 @@ class RegistrationRepository:
     def __init__(self):
         conn = self.__get_connection()
         cur = conn.cursor()
-        cur.execute("CREATE TABLE IF NOT EXISTS registrations(identity, public_key, signatures, approval_status)")
+        cur.execute("CREATE TABLE IF NOT EXISTS registrations(identity, public_key, signatures, approval_status, id)")
         conn.commit()
         
     def __rows_to_registration_requests(self, rows):
-        return [RegistrationRequest(Transaction(row[0], row[1], row[2]), row[3]) for row in rows]
+        return [RegistrationRequest(Transaction(row[0], row[1], row[2]), row[3], int(row[4])) for row in rows]
     
     def __get_connection(self):
         try:
@@ -20,15 +20,12 @@ class RegistrationRepository:
         except Exception as e:
             print("Failed to get sqlite db connection")
             
-    def approve(self, request: RegistrationRequest):
+    def update_rqeuest(self, request: RegistrationRequest):
         conn = self.__get_connection()
         cur = conn.cursor()
-        cur.execute(f"UPDATE registrations set approval_status = '{ApprovalStatus.Approved.value}' WHERE identity = ? AND public_key = ? AND signatures = ?",
+        cur.execute(f"UPDATE registrations set approval_status = '{request.status.value}', id = '{request.id}' WHERE identity = ? AND public_key = ? AND signatures = ?",
                     (request.transaction.identity, request.transaction.public_key, request.transaction.signatures))
         conn.commit()
-    
-    def reject(self, request: RegistrationRequest):
-        raise NotImplementedError
     
     def get_requests(self) -> List[RegistrationRequest]:
         conn = self.__get_connection()
@@ -42,12 +39,25 @@ class RegistrationRepository:
         res = cur.execute(f"SELECT * FROM registrations WHERE approval_status = '{ApprovalStatus.Pending.value}'").fetchall()
         return self.__rows_to_registration_requests(res)
     
+    def get_user_request(self) -> List[RegistrationRequest]:
+        conn = self.__get_connection()
+        cur = conn.cursor()
+        res = cur.execute(f"SELECT * FROM registrations WHERE approval_status = '{ApprovalStatus.Pending.value}'").fetchall()
+        return self.__rows_to_registration_requests(res)
+    
     def register_request(self, request: RegistrationRequest):
         conn = self.__get_connection()
         cur = conn.cursor()
-        cur.execute(f"INSERT INTO registrations VALUES (?, ?, ?, ?)", 
-                    (request.transaction.identity, request.transaction.public_key, request.transaction.signatures, request.status.value))
+        cur.execute(f"INSERT INTO registrations VALUES (?, ?, ?, ?, ?)", 
+                    (request.transaction.identity, request.transaction.public_key, request.transaction.signatures, request.status.value, str(request.id)))
         conn.commit()
+        
+    def get_request(self, transaction: Transaction) -> List[RegistrationRequest]:
+        conn = self.__get_connection()
+        cur = conn.cursor()
+        res = cur.execute(f"SELECT * FROM registrations WHERE identity = ? AND public_key = ? AND signatures = ?",
+                    (transaction.identity, transaction.public_key, transaction.signatures)).fetchall()
+        return self.__rows_to_registration_requests(res)
 
     
 if  __name__ == '__main__':
